Update the title for the image in the graphql post

--- a/_posts/2018-7-12-GraphQL.md
+++ b/_posts/2018-7-12-GraphQL.md
@@ -3,7 +3,7 @@ layout: post
 title: GraphQL 101
 ---
 
-![title]({{ site.baseurl }}/images/graphqlpres.jpeg)
+![Me talking about GraphQL]({{ site.baseurl }}/images/graphqlpres.jpeg)
 
 Today in IBM Hursley I gave a quick introduction to GraphQL. We are using GraphQL in my current project at IBM Watson, with good success. While we as a team are still learning how to best use it, I can at least attest for its benefits compared to REST.
 
